# doggy-dns

./: .clippy.toml  .gitignore  AGENTS.md  Cargo.toml  README.md  codecov.yml  tarpaulin.toml
.github/workflows/: codecov.yml  rust.yml
config/: dns-filter.toml  doggy-dns.toml
crates/dns-filter-core/: Cargo.toml
crates/dns-filter-core/benches/: handler_bench.rs
crates/dns-filter-core/src/: config.rs  handler.rs  lib.rs  server.rs
crates/dns-filter-core/src/middleware/: logging.rs  metrics.rs
crates/dns-filter-core/tests/: config_test.rs  handler_test.rs  middleware_test.rs
crates/dns-filter-nacos/: Cargo.toml
crates/dns-filter-nacos/benches/: nacos_bench.rs
crates/dns-filter-nacos/src/: authority.rs  config_watcher.rs  lib.rs  mapping.rs  watcher.rs
crates/dns-filter-nacos/tests/: authority_test.rs  mapping_test.rs  watcher_test.rs
crates/dns-filter-plugin/: Cargo.toml
crates/dns-filter-plugin/benches/: chain_bench.rs
crates/dns-filter-plugin/src/: authority.rs  authority_chain.rs  lib.rs
crates/dns-filter-plugin/src/builtin/: forward.rs  mod.rs  system_dns.rs
crates/dns-filter-plugin/tests/: authority_chain_test.rs  forward_test.rs  system_dns_test.rs
crates/doggy-dns-core/: Cargo.toml
crates/doggy-dns-core/benches/: handler_bench.rs
crates/doggy-dns-core/src/: config.rs  handler.rs  server.rs
crates/doggy-dns-core/src/middleware/: logging.rs  metrics.rs
crates/doggy-dns-core/tests/: config_test.rs  handler_test.rs  middleware_test.rs
crates/doggy-dns-nacos/: Cargo.toml
crates/doggy-dns-nacos/benches/: nacos_bench.rs
crates/doggy-dns-nacos/src/: config_watcher.rs  mapping.rs  watcher.rs
crates/doggy-dns-nacos/tests/: authority_test.rs  mapping_test.rs  watcher_test.rs
crates/doggy-dns-plugin/: Cargo.toml
crates/doggy-dns-plugin/benches/: chain_bench.rs
crates/doggy-dns-plugin/src/: authority.rs  authority_chain.rs  plugin.rs  registry.rs
crates/doggy-dns-plugin/src/builtin/: mod.rs  native.rs
crates/doggy-dns-plugin/tests/: authority_chain_test.rs  forward_test.rs  system_dns_test.rs
docs/superpowers/plans/: 2026-03-14-dns-filter-phase1.md  2026-03-14-doggy-dns-phase1.md
docs/superpowers/specs/: 2026-03-14-dns-filter-phase1-design.md  2026-03-14-doggy-dns-phase1-design.md
src/: main.rs
tests/: integration_test.rs
