[workspace]
resolver = "2"
members = [
    "crates/doggy-dns-core",
    "crates/doggy-dns-plugin",
    "crates/doggy-dns-nacos",
]

[package]
name = "doggy-dns"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A Rust-based service discovery DNS server built on hickory-dns"

[dependencies]
doggy-dns-core = { path = "crates/doggy-dns-core" }
doggy-dns-plugin = { path = "crates/doggy-dns-plugin" }
doggy-dns-nacos = { path = "crates/doggy-dns-nacos" }
hickory-server = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
dashmap = { workspace = true }
hickory-proto = { workspace = true }

[workspace.dependencies]
hickory-server = { version = "0.26.0-beta.1", features = ["tls-ring", "https-ring", "resolver"] }
hickory-proto = "0.26.0-beta.1"
hickory-resolver = { version = "0.26.0-beta.1", features = ["tokio", "system-config"] }
nacos-sdk = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "1.0"
dashmap = "6"
arc-swap = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
rustls = "0.23"
rustls-pemfile = "2"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
