[package]
name = "dns-filter-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
dns-filter-plugin = { path = "../dns-filter-plugin" }
hickory-server = { workspace = true }
hickory-proto = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
arc-swap = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
