[package]
name = "dns-filter-nacos"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
dns-filter-plugin = { path = "../dns-filter-plugin" }
hickory-server = { workspace = true }
hickory-proto = { workspace = true }
nacos-sdk = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
hickory-proto = { workspace = true }

[[bench]]
name = "nacos_bench"
harness = false
