[package]
name = "doggy-dns-plugin"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
hickory-server = { workspace = true }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
arc-swap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
doggy-dns-nacos = { path = "../doggy-dns-nacos" }
dashmap = { workspace = true }
hickory-proto = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "chain_bench"
harness = false
